<resources>
    <string name="app_name">ONEBIT</string>
    <string name="app_title">TimeMaster</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="register_question">Dont have an account yet?</string>
    <string name="one_bit">OneBit</string>
    <string name="register_account">Register Account</string>
    <string name="icon_user">User Icon</string>
    <string name="icon_phone">Phone Icon</string>
    <string name="icon_email">Email Icon</string>
    <string name="job_icon_description">Icon representing current job</string>
    <string name="current_job">Current Job</string>
    <string name="icon_lock">Lock Icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="logo_description">Clock logo</string>
    <string name="user_icon_description">User icon</string>
    <string name="phone_icon_description">Phone icon</string>
    <string name="lock_icon_description">Lock icon</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="email_icon_description">Email icon</string>
    <string name="password_icon_description">Password icon</string>
    <string name="new_schedule">New schedule</string>
    <string name="date">Date</string>
    <string name="schedule_title_hint">Title *</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="your_activity">Your Activity</string>
    <string name="attachment">Attachment</string>
    <string name="time_format">00:00 AM</string>
    <string name="activities">Activities</string>
    <string name="save">Save</string>
    <string name="back">back</string>
    <string name="menu">menu</string>
    <string name="add_activity">Add activity</string>
    <string name="remove_activity">Remove activity</string>
    <string-array name="priority_levels">
        <item>High (Red)</item>
        <item>Medium (Yellow)</item>
        <item>Low (Green)</item>
    </string-array>
</resources>