<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="fill"
    android:background="@android:color/white"
    android:minWidth="48dp"
    android:minHeight="48dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/mainbackgroundcolor"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            >
            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/back"
                android:contentDescription="@string/back"
                android:minHeight="48dp"
                android:background="@color/mainbackgroundcolor"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_schedule"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/union"
            android:contentDescription="@string/menu"
            android:minHeight="48dp"
            android:background="@color/mainbackgroundcolor"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/edit"
            android:contentDescription="@null"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/schedule_title_hint"
            android:autofillHints="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:layout_marginStart="7dp"
            android:minHeight="48dp"
            android:minWidth="48dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/date"
            android:textStyle="bold"
        />

        <androidx.cardview.widget.CardView
            android:layout_width="121dp"
            android:layout_height="31dp"
            app:cardBackgroundColor="@color/secondbackgroundcolor"
            app:cardCornerRadius="12dp"
            app:contentPaddingLeft="10dp"
            app:contentPaddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_format"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/description"
                android:textColor="@color/maintextcolor"
                android:layout_weight="1"
                android:textStyle="bold"
            />
            <TextView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/maintextcolor"
                android:textSize="14sp"
                android:text="@string/edit"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>
        </LinearLayout>

        <EditText
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:autofillHints="@null"
            android:background="@android:color/transparent"
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/activities"
            android:textSize="18sp"
            android:textStyle="bold"
        />
    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/save"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck"
    />
</LinearLayout>