<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <!-- Icon Header -->

        <!-- App Name -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_clock_logo"
            app:tint="#4285F4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textColor="#4285F4"
            android:textStyle="bold"
            android:gravity="center" />

        <!-- Subtitle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_account"
            android:textSize="18sp"
            android:textColor="#666666"
            android:gravity="center" />

        <!-- Full Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:minHeight="48dp"
            android:maxWidth="400dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_user"
                app:tint="#4285F4"
                android:contentDescription="@string/user_icon_description" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:hint="@string/full_name"
                android:autofillHints="name"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@null" />
        </LinearLayout>

        <!-- Current Job -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:minHeight="48dp"
            android:maxWidth="400dp">
        
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_work"
                app:tint="#4285F4"
                android:contentDescription="@string/job_icon_description" />
        
            <EditText
                android:id="@+id/edt_current_job"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/current_job"
                android:autofillHints="organizationName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@null"
                android:inputType="text" />
        </LinearLayout>


        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:minHeight="48dp"
            android:maxWidth="400dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_email"
                app:tint="#4285F4"
                android:contentDescription="@string/email_icon_description" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@null"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:minHeight="48dp"
            android:maxWidth="400dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_lock"
                app:tint="#4285F4"
                android:contentDescription="@string/lock_icon_description" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:autofillHints="password"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@null"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/togglePasswordVisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/toggle_password_visibility"
                android:src="@drawable/ic_visibility"
                android:background="@android:color/transparent"
                android:padding="4dp"/>
        </LinearLayout>

        <!-- Confirm Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:minHeight="48dp"
            android:maxWidth="400dp">
        
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_lock"
                app:tint="#4285F4"
                android:contentDescription="@string/lock_icon_description" />
        
            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:autofillHints="password"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@null"
                android:inputType="textPassword" />
        
            <ImageButton
                android:id="@+id/toggleConfirmPasswordVisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/toggle_password_visibility"
                android:src="@drawable/ic_visibility"
                android:background="@android:color/transparent"
                android:padding="4dp"/>
        </LinearLayout>


        <!-- Register Button -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#4285F4"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:padding="12dp"
            android:minHeight="48dp"
            android:maxWidth="400dp"
            android:background="@drawable/rounded_button2" />

        <!-- Login Redirect Button -->
        <TextView
            android:id="@+id/tv_login_redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Already have an account? Click here to log in"
            android:textColor="#4285F4"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
</ScrollView>
