<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:cardElevation="6dp"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="48dp"
        android:minWidth="48dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/cardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="14dp"
                android:text="@string/your_activity"
                android:textColor="@color/secontextcolor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="30dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/secondbackgroundcolor"
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:contentPadding="5dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_format"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textAlignment="center"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:minHeight="48dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/attachment"
                android:background="@color/white"
                android:src="@drawable/ic_attachment" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/attachment"
                android:textColor="@color/secontextcolor"
                android:textSize="16sp" />
        </LinearLayout>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/remove_activity"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:src="@drawable/ic_remove"
                android:background="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
